feat: gpt 커밋